# iot-edge

./: Linux_Build_Guide.md
v1/modules/: CMakeLists.txt
v1/modules/java_gw/: CMakeLists.txt
v1/modules/java_gw/src/: main.c
v1/modules/modbus_read/inc/: modbus_read_common.h
v1/modules/modbus_read/src/: modbus_read.c
v1/samples/java_sample/: CMakeLists.txt
